2019-1/221/users/4103/executions/1829_1648.log
== TEST (2019-06-13 08:06:17) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in range(size(fre)):
	if (i < carga ):
		a += 1
saida = zeros(a, dtype = int)
	for i in range(fre):
	saida += 1
print(saida)
-- ERROR:
File "XXXX", line 11
    for i in range(fre):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:06:45) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in range(size(fre)):
	if (i < carga ):
		a += 1
saida = zeros(a, dtype = int)
	for i in range(size(fre)):
	saida += 1
print(saida)
-- ERROR:
File "XXXX", line 11
    for i in range(size(fre)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:07:06) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in range(size(fre)):
	if (i < carga ):
		a += 1
saida = zeros(a, dtype = int)
	for i in range(carga):
	saida += 1
print(saida)
-- ERROR:
File "XXXX", line 11
    for i in range(carga):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:07:14) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in range(size(fre)):
	if (i < carga ):
		a += 1
saida = zeros(a, dtype = int)

	for i in range(carga):
	saida += 1
print(saida)
-- ERROR:
File "XXXX", line 12
    for i in range(carga):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:08:10) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in fre :
	if (i < carga ):
		a += 1
saida = zeros(a, dtype = int)

	for i in range(size(fre)):
	saida += 1
print(saida)
-- ERROR:
File "XXXX", line 12
    for i in range(size(fre)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:08:20) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in fre :
	if (i < carga ):
		a += 1
saida = zeros(a, dtype = int)

	for i in range(size(fre)):
		saida += 1
print(saida)
-- ERROR:
File "XXXX", line 12
    for i in range(size(fre)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:08:34) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in fre :
	if (i < carga ):
		a += 1
saida = zeros(a, dtype = int)

for i in range(size(fre)):
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:09:04) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in fre :
	if (i > carga ):
		a += 1
saida = zeros(a, dtype = int)

for i in range(size(fre)):
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:09:33) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in fre :
	if (i < carga):
		a += 1
saida = zeros(a, dtype = int)

for i in range(size(fre)):
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:09:43) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in fre :
	if (i < carga[i]):
		a += 1
saida = zeros(a, dtype = int)

for i in range(size(fre)):
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:10:14) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in range(size(fre)) :
	if (i < carga[i]):
		a += 1
saida = zeros(a, dtype = int)

for i in range(fre):
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:10:30) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in range(size(fre)) :
	if (i < carga[i]):
		a += 1
saida = zeros(a, dtype = int)

for i in fre :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:10:55) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in range(size(fre)) :
	if (i < carga[i]):
		a += 1
saida = zeros(a, dtype = int)

for i in range(carga) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:11:09) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in range(size(fre)) :
	if (i < carga[i]):
		a += 1
saida = zeros(a, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:11:23) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in range(size(fre)) :
	if (i < carga[i]):
		a += 1
print(a)
saida = zeros(a, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:12:06) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in range(size(fre)) :
	if (i > carga[i]):
		a += 1
print(a)
saida = zeros(a, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:12:34) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in range(size(fre)) :
	if (carga[i] < i):
		a += 1
print(a)
saida = zeros(a, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:13:05) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


a = 0
for i in range(size(fre[i])):
	if (carga[i] < i):
		a += 1
print(a)
saida = zeros(a, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:13:16) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75

i = 0
a = 0
for i in range(size(fre[i])):
	if (carga[i] < i):
		a += 1
print(a)
saida = zeros(a, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:14:20) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75

i = 0
a = 0
for i in range(size(fre[i])):
	if (carga[i] < i):
		i += 1
print(i)
saida = zeros(a, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:15:38) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


rep = 0
for i in range(size(fre)):
	if (i < carga[i]):
		rep += 1
print(rep)
saida = zeros(a, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:15:49) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


rep = 0
for i in range(size(fre)):
	if (i < carga[i]):
		rep += 1
print(rep)
saida = zeros(rep, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:16:25) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


rep = 0
for i in range(size(fre)):
	if (i < carga[i]):
		rep += 1
		print(rep)
saida = zeros(rep, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:17:23) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


rep = 0
for i in range(size(fre)):
	if (i < carga):
		rep = rep + 1
print(rep)
saida = zeros(rep, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:17:36) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga[i] = fre*0.75


rep = 0
for i in range(size(fre)):
	if (i < carga):
		rep = rep + 1
print(rep)
saida = zeros(rep, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:17:58) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.75


rep = 0
for i in range(size(fre)):
	if (i < carga[i]):
		rep = rep + 1
print(rep)
saida = zeros(rep, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:19:22) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.70


rep = 0
for i in range(size(fre)):
	if (i < carga[i]):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:21:11) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre[i]*0.70


rep = 0
for i in range(size(fre)):
	if (i < carga[i]):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:22:14) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.70


rep = 0
for i in range(size(fre)):
	if (i < carga[i]):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:22:39) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))
carga = fre*0.70


rep = 0
for i in range(size(fre)):
	if (i < carga[i]):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:23:36) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (i < fre):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:23:45) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:25:36) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(fre):
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:25:48) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(fre[i]) :
		saida += 1
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:26:00) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(fre[i]) :
		saida += 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:26:08) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(fre) :
		saida += 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:26:18) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:26:52) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(size(fre)):
	saida += 1
print(saida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:27:17) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(size(fre[i])):
	saida += 1
print(saida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:27:31) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(size(fre)):
	saida[i] += 1
print(saida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:27:44) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida[i] = zeros(rep, dtype = int)

for i in range(size(fre)):
	saida[i] += 1
print(saida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:28:12) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(size(fre)):
	saida[i] += 1
print(saida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:28:17) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(size(fre)):
	saida[i] += 1
print(saida[i])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:29:21) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)
i = 0
for i in range(size(fre)):
	saida[i] += 1
	
print(saida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:30:11) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(size(fre)):
	saida += rep
	
print(saida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:30:38) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(size(fre)):
	saida[rep] += 1 
	
print(saida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:31:09) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(size(fre)):
	saida[i] += 1 
	
print(saida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:31:17) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(size(fre[i])):
	saida[i] += 1 
	
print(saida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:31:43) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
print(rep)

saida = zeros(rep, dtype = int)

for i in range(size(fre)):
	saida += 1 
	
print(saida)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:36:26) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(fre, dtype=int)
rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
		saida[i] = i
print(rep)
print(saida)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:36:49) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in fre:
	if (i < 70):
		rep = rep + 1
		saida[i] = i
print(rep)
print(saida)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:37:41) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(fre):
	if (i < 70):
		rep = rep + 1
		saida[i] = i
print(rep)

print(saida)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:37:52) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (i < 70):
		rep = rep + 1
		saida[i] = i
print(rep)

print(saida)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:38:34) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i
print(rep)

print(saida)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:40:21) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i
	else:
		saida[i] += 1
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:40:39) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i
	else:
		saida[i] -= 1
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:41:16) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i
	else:
		saida[i] = saida[i] - fre[i]
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:41:36) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i
	else:
		
print(rep)
print(saida)
-- ERROR:
File "XXXX", line 12
    print(rep)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:41:43) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i
	else:
print(rep)
print(saida)
-- ERROR:
File "XXXX", line 11
    print(rep)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:42:01) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i
	else:
		print(saida[i])
print(rep)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:42:24) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i

		
print(rep)
print(saida[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:42:36) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i

		
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:45:49) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i 
	else:
		saida[i] = saida[i] < 70
		

		
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:46:14) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i 
	else:
		saida[i] += 1
		

		
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:46:26) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i 
	else:
		saida[i] +=0
		

		
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:46:34) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i 
	else:
		saida[i] +=0
		

		
print(rep)
print(saida)
-- EXECUTION TIME:
0.976019
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 0 0 4 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[0 1 2 0 0 5 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[0 1 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:53:08) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i 
	else:
		saida[i]
		

		
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:54:14) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
				
print(rep)
for i in fre[i]:
	saida[i] = i
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:54:27) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
				
print(rep)
for i in fre:
	saida[i] = i
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:54:51) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
				
print(rep)
for i in range(fre):

	saida[i] = i
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:55:13) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
				
print(rep)
for i in range(fre[i]):
	saida[i] = i
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:55:40) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i - 1
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:55:59) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i - fre[i]
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:56:55) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype=int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i - saida[i]
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:00:10) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
saida = zeros(size(fre), dtype = int)
		saida[rep] = i
		
print(rep)
print(saida)
-- ERROR:
File "XXXX", line 10
    saida[rep] = i
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:00:20) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
saida = zeros(size(fre), dtype = int)
		saida[i] = i
print(rep)
print(saida)
-- ERROR:
File "XXXX", line 10
    saida[i] = i
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:00:42) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(size(fre), dtype = int)
		
	saida[i] = i
print(rep)
print(saida)
-- ERROR:
File "XXXX", line 12
    saida[i] = i
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:00:50) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(size(fre), dtype = int)
		saida[i] = i
print(rep)
print(saida)
-- ERROR:
File "XXXX", line 11
    saida[i] = i
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:01:01) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(size(fre), dtype = int)
		
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:01:21) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(rep, dtype=int)
		
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:01:36) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(rep, dtype=int)
		saida = i
print(rep)
print(saida)
-- ERROR:
File "XXXX", line 11
    saida = i
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:01:49) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(rep, dtype=int)
		saida[i] = i
print(rep)
print(saida)
-- ERROR:
File "XXXX", line 11
    saida[i] = i
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:01:56) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(rep, dtype=int)
saida[i] = i
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:02:12) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(rep, dtype=int)
saida[i] = i

print(rep)
print(saida[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:03:13) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(rep, dtype=int)
		saida[i] = i

print(rep)
print(saida)
-- ERROR:
File "XXXX", line 11
    saida[i] = i
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:03:19) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(rep, dtype=int)
	saida[i] = i

print(rep)
print(saida)
-- ERROR:
File "XXXX", line 11
    saida[i] = i
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:04:04) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(rep, dtype=int)
for i in fre[i]
	saida[i] = i

print(rep)
print(saida)
-- ERROR:
File "XXXX", line 11
    for i in fre[i]
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:04:09) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(rep, dtype=int)
for i in fre[i]:
	saida[i] = i

print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:04:18) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(rep, dtype=int)
for i in fre:
	saida[i] = i

print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:05:17) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))


rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(rep, dtype=int)
for i in fre:
	saida[i] += i

print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:05:55) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
for i in fre:
	saida[i] += i

print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:06:02) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
for i in fre:
	saida[i] = i

print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:06:16) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
for i in range(fre):
	saida[i] = i

print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:06:32) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
for i in range(fre[i])?
	saida[i] = i

print(rep)
print(saida)
-- ERROR:
File "XXXX", line 9
    for i in range(fre[i])?
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:06:36) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
for i in range(fre[i]):
	saida[i] = i

print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:08:33) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i
for i in range(fre[i]):
	saida[i] = i

print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:08:43) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i


print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:12:26) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i
for i in range(size(rep)):
	saida[i] = i

print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:12:37) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
for i in range(size(rep)):
	saida[i] = i

print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:14:03) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		saida[i] = i
for i in range(size(fre)):
	for j in range(size()
	

print(rep)
print(saida)
-- ERROR:
File "XXXX", line 14
    print(rep)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:16:13) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i

print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:17:06) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			saida[i] = saida[j] - i

print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:17:28) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			saida[i] -=saida[j] 

print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:17:45) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:19:06) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			saida[j] = saida[i] - 1
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:19:17) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			saida[j] = saida[i] - i
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:19:34) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			saida[j] = saida[i] 
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:19:56) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			saida[j] = saida[i] - size(saida)
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:20:06) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			saida[j] = saida[i] - size(fre)
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:20:17) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			saida[j] = saida[i] 
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:20:42) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			saida[j] = saida[i] - j
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:21:08) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			saida[j] = saida[i] 
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:21:21) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

saida = zeros(size(fre), dtype =int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:22:47) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(size(fre), dtype = int)
rep = 0
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			
			
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:23:28) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(size(fre), dtype = int)
rep = 0
for i in range(size(fre)):
for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			
			
print(rep)
print(saida)
-- ERROR:
File "XXXX", line 12
    for j in range(size(saida)):
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:23:37) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(size(fre), dtype = int)
rep = 0
for i in range(size(fre)):
	for j in range(size(saida)):
		if (fre[i] < 70):
			saida[j] = i
			
			
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:24:27) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(size(fre), dtype = int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		saida[rep] = i
		rep = rep + 1
			
			
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:24:57) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(rep, dtype = int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		saida[rep] = i
		rep = rep + 1
			
			
print(rep)
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:25:04) 
-- CODE:
from numpy import * 
fre = array(eval(input("Frenquencia dos alunos: ")))

rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		rep = rep + 1
		
saida = zeros(rep, dtype = int)
rep = 0
for i in range(size(fre)):
	if (fre[i] < 70):
		saida[rep] = i
		rep = rep + 1
			
			
print(rep)
print(saida)
-- EXECUTION TIME:
1.03351
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[1 2 5]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[1 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
